--- a/plugins/AnnotationTab/pom.xml
+++ b/plugins/AnnotationTab/pom.xml
@@ -32,7 +32,7 @@
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igb-service</artifactId>
+            <artifactId>igb-services-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -67,7 +67,12 @@
             <scope>provided</scope>
         </dependency>
         <!--End of logging dependencies-->
-         <dependency>
+        <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>bndlib</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>com.lorainelab</groupId>
             <artifactId>igb-genoviz-extensions-api</artifactId>
             <scope>provided</scope>
@@ -91,9 +96,9 @@
                         <Bundle-SymbolicName>com.affymetrix.igb.tabs.annotation.AnnotationTrackPanel</Bundle-SymbolicName>
                         <Import-Package>com.jidesoft.combobox,com.affymetrix.igb.window.service,*</Import-Package>
                         <Bundle-Activator>com.affymetrix.igb.tabs.annotation.Activator</Bundle-Activator>
-                        <Bundle-Category>IGBTabPanel-com.affymetrix.igb.tabs.annotation.AnnotationTrackPanel</Bundle-Category>
                         <Export-Package/>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
+                        <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
             </plugin>
