--- a/plugins/SearchView/pom.xml
+++ b/plugins/SearchView/pom.xml
@@ -39,7 +39,7 @@
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igb-service</artifactId>
+            <artifactId>igb-services-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
