--- a/plugins/plugins_page/pom.xml
+++ b/plugins/plugins_page/pom.xml
@@ -53,7 +53,7 @@
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igb-service</artifactId>
+            <artifactId>igb-services-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
