--- a/plugins/window_service_def/pom.xml
+++ b/plugins/window_service_def/pom.xml
@@ -28,7 +28,7 @@
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igb-service</artifactId>
+            <artifactId>igb-services-api</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -58,6 +58,11 @@
             <scope>provided</scope>
         </dependency>
         <!--End of logging dependencies-->
+        <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>bndlib</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
