Revert "work in progress refactoring.... "
This reverts commit 938fc678316801c4ff904913b846b1e0bc389547.

--- a/core/igb_service/pom.xml
+++ b/core/igb_service/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     
     <groupId>com.affymetrix</groupId>
-    <artifactId>igb-services-api</artifactId>
-    <version>${igb-services-api-version}</version>
+    <artifactId>igb-service</artifactId>
+    <version>${igb-service-version}</version>
     
     <packaging>bundle</packaging>
 
-    <name>igb services api</name>
+    <name>igb service</name>
 
     <dependencies>
         <dependency>
