--- a/core/window_service/pom.xml
+++ b/core/window_service/pom.xml
@@ -17,7 +17,7 @@
     <dependencies>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igb-services-api</artifactId>
+            <artifactId>igb-service</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
