--- a/developmentPlugins/GeometricMean/pom.xml
+++ b/developmentPlugins/GeometricMean/pom.xml
@@ -40,7 +40,7 @@
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igb-services-api</artifactId>
+            <artifactId>igb-service</artifactId>
             <scope>provided</scope>
         </dependency>
         <dependency>
