fixed possible npe

--- a/plugins/plugins_page/pom.xml
+++ b/plugins/plugins_page/pom.xml
@@ -88,6 +88,11 @@
             <scope>provided</scope>
         </dependency>
         <!--End of logging dependencies-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
