updated project to include install4j profile and updated gradle script to run install4j

--- a/.gitignore
+++ b/.gitignore
@@ -214,3 +214,4 @@ extbundles/*
 /core/SeqSymmetryPreprocessorApi/target/
 /core/igbGenovizExtensions/target/
 /core/igbGenovizExtensionsApi/target/
+/distribution/build/
