--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ task cleanOldBuild(type: Delete) {
 
 task media(dependsOn: cleanOldBuild, type: com.install4j.gradle.Install4jTask) {
     projectFile = file('distribution/igb.install4j')
-    variables = [projectHomeDirectory: projectDir]
+    variables = [projectHomeDirectory: projectDir, igbVersion: commonProps.get('appVersion'), codeBaseUrl: System.getProperty('codebaseUrl')]
 }
 
 
