--- a/developmentPlugins/BAMIndexer/pom.xml
+++ b/developmentPlugins/BAMIndexer/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.affymetrix</groupId>
         <artifactId>igb-project</artifactId>
-        <version>8.3-SNAPSHOT</version>
+        <version>8.3.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     
