--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.affymetrix</groupId>
     <artifactId>igb-project</artifactId>
-    <version>8.3-SNAPSHOT</version>
+    <version>8.3.0</version>
     <packaging>pom</packaging>
 
     <name>IGB Project</name>
@@ -15,8 +15,8 @@
         resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- force java 1.7 compatibility -->
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <!-- As a best pratice, all versions will be controlled via properties -->
         
         <!-- Start of external bundle version declarations -->        
@@ -841,7 +841,6 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.1</version>
                     <configuration>
-                        <compilerVersion>1.6</compilerVersion>
                         <compilerArgs>
                             <arg>-Xlint:all</arg>
                         </compilerArgs>
